--- a/index.html
+++ b/index.html
@@ -47,45 +47,45 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="#" media="(max-width: 426px)">
-                        <img src="#" alt="">
+                        <source srcset="img/farinha_de_milho_flocao_500g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/farinha_de_milho_flocao_500g_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Descrição do produto</p>
+                    <p>Farinha de milho - Maratá - Flocão - 500g </p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">Valor</h3>
+                    <h3 class="preco">R$ 2,50</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="" media="(max-width: 426px)">
-                        <img src="" alt="">
+                        <source srcset="img/feijao_carioca_kicaldo_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/feijao_carioca_kicaldo_1kg_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Descrição do produto</p>
+                    <p>Feijão Carioca - Kicaldo - 2Kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3  class="preco">Valor</h3>
+                    <h3  class="preco">R$ 8,50</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="" media="(max-width: 426px)">
-                        <img src="" alt="">
+                        <source srcset="img/leite_em_po_italac_400g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/leite_em_po_italac_400g_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Descrição do produto</p>
+                    <p>Leite em Pó - Italac - 400g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">Valor</h3>
+                    <h3 class="preco">R$ 15,00</h3>
                 </div>
             </div>
 
@@ -290,7 +290,7 @@
 
     <footer>
         <h3>AVISO! - ESTE SITE É APENAS UM MODELO DE APRESENTAÇÃO.</h3>
-        <p>Tudo que esta nesse site é apenas demonstrativo.</p>
+        <pi id="prodape">Tudo que esta nesse site é apenas demonstrativo.</p>
         <h4>Quer um modelo como esse para seu mercadinho?</h4>
         <h4>Entre em contato: (88) 9 9350-3686 </h4>
     </footer>
