--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Feijão Carioca - Kicaldo - 2Kg</p>
+                    <p>Feijão Carioca - Kicaldo - 1Kg</p>
                 </div>
                 <div class="valor-produto">
                     <h3  class="preco">R$ 8,50</h3>
@@ -167,7 +167,7 @@
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Filé de Peito de frango - Ceara - 1Kg</p>
+                    <p>Filé de Peito de frango - Seara - 1Kg</p>
                 </div>
                 <div class="valor-produto">
                     <h3 class="preco">R$ 18,79</h3>
@@ -197,7 +197,7 @@
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Empanado - perdigão - 200g</p>
+                    <p>Empanado - Perdigão - 200g</p>
                 </div>
                 <div class="valor-produto">
                     <h3 class="preco">R$ 2,49</h3>
