--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Saboneite em barra - Paçmolive - 85g</p>
+                    <p>Saboneite em barra - Palmolive - 85g</p>
                 </div>
                 <div class="valor-produto">
                     <h3 class="preco">R$ 2,89</h3>
