--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li class="logotipo"><img src="" alt=""></li>
 
-                <li class="hideMobile"><a href="#">INÍCIO</a></li>
+                <li class="hideMobile" id="nav_select"><a href="#">INÍCIO</a></li>
                 <li class="hideMobile"><a href="#">ALIMENTOS</a></li>
                 <li class="hideMobile"><a href="#">BEBIDAS</a></li>
                 <li class="hideMobile"><a href="#">CARNE</a></li>
