--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="banner-principal-topo">
-        AQUI FICARÁ O BANNER
+            <img class="img-banner-principal-topo" src="../Site_mercadinho-modelo_panfleto/img/aparelho_barbear_gillette_prestobarba_2_ultragrip_2unid.jpg" alt="">
     </div>
     <header>
         <nav>
@@ -29,7 +29,7 @@
                     </a>
                 </li>
             </ul>
-
+            <!--NAV MOBILE-->>
             <ul class="sidebar">
                 <li onclick=hideSiderbar()>
                     <a href="#">
