--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <title>MECADINHO FAMÍLIA</title>
 </head>
 <body>
-    <div class="banner-principal-topo">
-            <img class="img-banner-principal-topo" src="../Site_mercadinho-modelo_panfleto/img/aparelho_barbear_gillette_prestobarba_2_ultragrip_2unid.jpg" alt="">
-    </div>
+    
     <header>
+        <div class="banner-principal-topo">
+            <picture>
+                <source srcset="img/banner_principal_topo_425.jpg" media="(max-width: 426px)">
+                <img class="img-banner-principal-topo" src="img/banner_principal_topo.jpg" alt="">
+            </picture>
+        </div>
         <nav>
             <!-- NAV WEB -->
             <ul>
-                <li class="logotipo"><img src="" alt=""></li>
+                <li class="logotipo"><img src="img/001_logo_mercadinho_familia.png" alt=""></li>
 
                 <li class="hideMobile" id="nav_select"><a href="#">INÍCIO</a></li>
                 <li class="hideMobile"><a href="#">ALIMENTOS</a></li>
