--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 
     <main>
         <div class="propaganda">
-            <picture>
-                <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
-                <img src="img/propaganda/principal_450.jpg"">
-            </picture>
+            <dic class="propaganda_gd">
+                <picture>
+                    <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
+                    <img src="img/propaganda/principal_450.jpg"">
+                </picture>
+            </dic>
 
             <div class="bloco_propaganda_pq">
                 <picture>
