atualização pq alimentos
atualização nos produtos da página alimentos

--- a/pg_alimentos.html
+++ b/pg_alimentos.html
@@ -73,7 +73,7 @@
                 <div class="img-produto">
                     <picture>
                         <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
+                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 1Kg">
                     </picture>
                 </div>
                 <div class="descricao-produto">
@@ -88,7 +88,7 @@
                 <div class="img-produto">
                     <picture>
                         <source srcset="img/farinha_de_milho_flocao_500g_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/farinha_de_milho_flocao_500g_233.jpg" alt="">
+                        <img src="img/farinha_de_milho_flocao_500g_233.jpg" alt="Farinha de Milho 500g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
@@ -103,7 +103,7 @@
                 <div class="img-produto">
                     <picture>
                         <source srcset="img/feijao_carioca_kicaldo_1kg_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/feijao_carioca_kicaldo_1kg_233.jpg" alt="">
+                        <img src="img/feijao_carioca_kicaldo_1kg_233.jpg" alt="Feijão carioca 1Kg">
                     </picture>
                 </div>
                 <div class="descricao-produto">
@@ -117,45 +117,75 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/leite_em_po_italac_400g_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/leite_em_po_italac_400g_233.jpg" alt="">
+                        <source srcset="img/arroz_branco_camil_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/arroz_branco_camil_1kg_233.jpg" alt="arroz Branco Camil 1Kg">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Leite em Pó - Italac - 400g</p>
+                    <p>Arroz Branco - Camil - 1Kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 15,00</h3>
+                    <h3 class="preco">R$ 5,39</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
+                        <source srcset="img/feijao_preto_azulao_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/feijao_preto_azulao_1kg_233.jpg" alt="Feijão Preto Azulão 1kg">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
+                    <p>Feijão Preto - Azulão - 1Kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 5,69</h3>
+                    <h3 class="preco">R$ 8,29</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
+                        <source srcset="img/macarrao_patyan_500g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/macarrao_patyan_500g_233.jpg" alt="Macarrão Patyan 500g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
+                    <p>Macarrão Spaguete - Patyan - 500g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 5,69</h3>
+                    <h3 class="preco">R$ 3,89</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/macarrao_parafuso_brandini_500g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/macarrao_parafuso_brandini_500g_233.jpg" alt="Macarrão Parafuso Brandini 500g">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Macarrão Parafuso - Brandini - 500g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 4,49</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/farinha_de_trigo_dona_benta_sem ferm_1kg_233.jpg" media="(max-width: 426px)">
+                        <img src="img/farinha_de_trigo_dona_benta_sem ferm_1kg_233.jpg" alt="Farinha detrigo sem ferm. Dona benta 1 kg">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Farinha de Trigo sem ferm. - Dona Benta - 1Kg</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 3,75</h3>
                 </div>
             </div>
 
@@ -167,90 +197,120 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/leite_em_po_italac_400g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/leite_em_po_italac_400g_233.jpg" alt="Leite em pó italac 400g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Leite em Pó integral - Italac - 400g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 14,99</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/guarana_antartica_original_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/guarana_antartica_original_2L_233.jpg" alt="">
+                        <source srcset="img/leite_em_po_desnatado_itambe_500g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/leite_em_po_desnatado_itambe_500g_233.jpg" alt="leite em Pó desnatado itambé 500g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Guaraná Antártica - Sabor Original - 2L</p>
+                    <p>Leite em Pó desnatado - itambé - 500g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 8,99</h3>
+                    <h3 class="preco">R$ 18,49</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/delrio_todos_sabor_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/delrio_todos_sabor_2L_233.jpg" alt="">
+                        <source srcset="img/margarinha_qualy_cremosa_250g-191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/margarinha_qualy_cremosa_250g-233.jpg" alt="margarina Qualy Cremosa 250g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Delrio - Sabor(Guraná, Laranja, Uva) - 2L</p>
+                    <p>Margarina - Qualy Cremosa - 250g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 6,00 unid</h3>
+                    <h3 class="preco">R$ 4,99</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/creme_de_leite_mococa_200g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/creme_de_leite_mococa_200g_233.jpg" alt="Creme de leite Mococa 200g">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Creme de Leite - Mococa - 200g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 1,99</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/iogurte_morango_itambe_1.15kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/iogurte_morango_itambe_1.15kg_233.jpg" alt="Iogurte Morango Itambé 1.15Kg">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Iogurte Morango - Itambé - 1,15Kg</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 15,99</h3>
                 </div>
             </div>
             
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/pepsi_original_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/pepsi_original_2L_233.jpg" alt="">
+                        <source srcset="img/leite_condecado_moca_395g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/leite_condecado_moca_395g_233.jpg" alt="Leite Condesado Moça 395g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Pepsi - Sabor Original - 2L</p>
+                    <p>Leite Condesado - Moça - 395g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 8,99</h3>
+                    <h3 class="preco">R$ 5,99</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/leite_integral_betania_1L_233.jpg" media="(max-width: 426px)">
+                        <img src="img/leite_integral_betania_1L_233.jpg" alt="Leite integral Betânia 1L">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Leite integral - Betânia - 1L</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 6,49</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/requeijao_cremoso_tradicional_vigor_250g_233.jpg" media="(max-width: 426px)">
+                        <img src="img/requeijao_cremoso_tradicional_vigor_250g_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Requeijão Cremoso Tradicional - Vigor - 250g</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 4,99</h3>
                 </div>
             </div>
             
