--- a/pg_bebidas.html
+++ b/pg_bebidas.html
@@ -47,12 +47,12 @@
 
     <main>
         <div class="propaganda">
-            <dic class="propaganda_gd">
+            <div class="propaganda_gd">
                 <picture>
                     <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
                     <img src="img/propaganda/principal_450.jpg"">
                 </picture>
-            </dic>
+            </div>
 
             <div class="bloco_propaganda_pq">
                 <picture>
@@ -72,12 +72,87 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
+                        <source srcset="img/suco_frisco_pct_25g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/suco_frisco_pct_25g_233.jpg" alt="Suco Pacote Frisco 25g">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
+                    <p>Suco de pacote (varios sabores) - Frisco - 25g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 1,05</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/suco_tang_pct_18g_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/suco_tang_pct_18g_233.jpg" alt="Suco Paote Tang 18g">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Suco de pacote (varios sabores) - Tang - 18g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 1,35</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/suco_caixa_delvalle_1l_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/suco_caixa_delvalle_1l_233.jpg" alt="Suco de caixa (varios sabores) - Del valle - 1L">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Suco de caixa (varios sabores) - Del valle - 1L</p>
+                </div>
+                <div class="valor-produto">
+                    <h3  class="preco">R$ 10,90</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/suco_kapo_200ml_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/suco_kapo_200ml_233.jpg" alt="Suco de caixa - Kapo - 200ml">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Suco de caixa - Kapo - 200ml</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 2,49</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/citrus_laranja_230ml_233.jpg" alt="Citrus - Laranja - 330ml">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Citrus - Laranja - 330ml</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 1,99</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/suco_marata_pct_233.jpg" media="(max-width: 426px)">
+                        <img src="img/suco_marata_pct_233.jpg" alt="Suco de pacote (varios sabores) - Maratá - 30g">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Suco de pacote (varios sabores) - Maratá - 30g</p>
                 </div>
                 <div class="valor-produto">
                     <h3 class="preco">R$ 5,69</h3>
@@ -87,79 +162,56 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/farinha_de_milho_flocao_500g_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/farinha_de_milho_flocao_500g_233.jpg" alt="">
+                        <source srcset="img/tampico - laranja -2L_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/tampico - laranja -2L_233.jpg" alt="Tampico - Laranja - 2L">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Farinha de milho - Maratá - Flocão - 500g </p>
+                    <p>Tampico - Laranja - 2L</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 2,50</h3>
+                    <h3 class="preco">R$ 5,99</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/feijao_carioca_kicaldo_1kg_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/feijao_carioca_kicaldo_1kg_233.jpg" alt="">
+                        <source srcset="img/polpa-de_fruta_manga_fud_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/polpa-de_fruta_manga_fud_1kg_233.jpg" alt="Polpa de Fruta - Manga - Fud - 1kg">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Feijão Carioca - Kicaldo - 1Kg</p>
+                    <p>Polpa de Fruta - Manga - Fud - 1kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3  class="preco">R$ 8,50</h3>
-                </div>
-            </div>
-
-            <div class="produto">
-                <div class="img-produto">
-                    <picture>
-                        <source srcset="img/leite_em_po_italac_400g_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/leite_em_po_italac_400g_233.jpg" alt="">
-                    </picture>
-                </div>
-                <div class="descricao-produto">
-                    <p>Leite em Pó - Italac - 400g</p>
-                </div>
-                <div class="valor-produto">
-                    <h3 class="preco">R$ 15,00</h3>
-                </div>
-            </div>
-
-            <div class="produto">
-                <div class="img-produto">
-                    <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
-                    </picture>
-                </div>
-                <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
-                </div>
-                <div class="valor-produto">
-                    <h3 class="preco">R$ 5,69</h3>
-                </div>
-            </div>
-
-            <div class="produto">
-                <div class="img-produto">
-                    <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
-                    </picture>
-                </div>
-                <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
-                </div>
-                <div class="valor-produto">
-                    <h3 class="preco">R$ 5,69</h3>
+                    <h3 class="preco">R$ 11,49</h3>
                 </div>
             </div>
 
         </article>
+        <br>
+        <div class="propaganda">
+
+            <div class="bloco_propaganda_pq">
+                <picture>
+                    <source srcset="img/propaganda/desconto_50_145.jpg" media="(max-width: 426px)">
+                    <img src="img/propaganda/desconto_50_225.jpg" alt="propaganda" class="propaganda_pq">
+                </picture>
+
+                <picture>
+                    <source srcset="img/propaganda/segunda_verde_145.jpg" media="(max-width: 426px)">
+                    <img src="img/propaganda/segunda_verde_225.jpg" alt="propaganda" class="propaganda_pq">
+                </picture>
+            </div>
+
+            <div class="propaganda_gd">
+                <picture>
+                    <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
+                    <img src="img/propaganda/principal_450.jpg"">
+                </picture>
+            </div>
+        </div>
 
         <h2>REFRIGERANTES</h2>
         <article class="vitrine">
@@ -227,30 +279,60 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/delrio_todos_sabor_250ml_233.jpg" media="(max-width: 426px)">
+                        <img src="img/delrio_todos_sabor_250ml_233.jpg" alt="Delrio (Uva, Guaraná, Laranja, Cola) - 250ml">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Delrio (Uva, Guaraná, Laranja, Cola) - 250ml</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 1,99</h3>
                 </div>
             </div>
 
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/coca_cola_250ml_192.25.jpg" media="(max-width: 426px)">
+                        <img src="img/coca_cola_250ml_233.jpg" alt="Coca-Cola 250ml">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Coca Cola - Sabor original - 250ml</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 2,49</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/coca_cola_sem_acucar_350ml_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/coca_cola_sem_acucar_350ml_233.jpg" alt="Coca-Cola lata - sem açucar - 350ml">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Coca-Cola lata - sem açucar - 350ml</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 3,89</h3>
+                </div>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/guarana_antartica_zero_2L_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/guarana_antartica_zero_2L_233.jpg" alt="Guaraná Antártica - Zero - 2L">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Guaraná Antártica - Zero - 2L</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 8,15</h3>
                 </div>
             </div>
             
