--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
     <main>
         <div class="propaganda">
-            <dic class="propaganda_gd">
+            <div class="propaganda_gd">
                 <picture>
                     <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
                     <img src="img/propaganda/principal_450.jpg"">
                 </picture>
-            </dic>
+            </div>
 
             <div class="bloco_propaganda_pq">
                 <picture>
@@ -195,6 +195,27 @@
             </div>
             
         </article>
+        <br>
+        <div class="propaganda">
+
+            <div class="bloco_propaganda_pq">
+                <picture>
+                    <source srcset="img/propaganda/desconto_50_145.jpg" media="(max-width: 426px)">
+                    <img src="img/propaganda/desconto_50_225.jpg" alt="propaganda" class="propaganda_pq">
+                </picture>
+                <picture>
+                    <source srcset="img/propaganda/segunda_verde_145.jpg" media="(max-width: 426px)">
+                    <img src="img/propaganda/segunda_verde_225.jpg" alt="propaganda" class="propaganda_pq">
+                </picture>
+            </div>
+
+            <div class="propaganda_gd">
+                <picture>
+                    <source media="(max-width: 426px)" srcset="img/propaganda/principal_300.jpg">
+                    <img src="img/propaganda/principal_450.jpg"">
+                </picture>
+            </div>
+        </div>
 
         <h2>CARNE</h2>
         <article class="vitrine">
