--- a/pg_bebidas.html
+++ b/pg_bebidas.html
@@ -19,7 +19,7 @@
 
                 <li class="hideMobile"><a href="index.html">INÍCIO</a></li>
                 <li class="hideMobile"><a href="pg_alimentos.html">ALIMENTOS</a></li>
-                <li class="hideMobile" id="nav_select"><a href="#">BEBIDAS</a></li>
+                <li class="hideMobile" id="nav_select"><a href="pg_bebidas.html">BEBIDAS</a></li>
                 <li class="hideMobile"><a href="pg_carne.html">CARNE</a></li>
                 <li class="hideMobile"><a href="pg_higiene.html">HIGIENE</a></li>
 
@@ -38,7 +38,7 @@
                 </li>
                 <li class="mobiledrop"><a href="index.html">INÍCIO</a></li>
                 <li class="mobiledrop"><a href="pg_alimentos.html">ALIMENTOS</a></li>
-                <li class="mobiledrop"><a href="#">BEBIDAS</a></li>
+                <li class="mobiledrop"><a href="pg_bebidas.html">BEBIDAS</a></li>
                 <li class="mobiledrop"><a href="pg_carne.html">CARNE</a></li>
                 <li class="mobiledrop"><a href="pg_higiene.html">HIGIENE</a></li>
             </ul>
@@ -132,7 +132,7 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
+                        <source srcset="img/citrus_laranja_230ml_191.25.jpg" media="(max-width: 426px)">
                         <img src="img/citrus_laranja_230ml_233.jpg" alt="Citrus - Laranja - 330ml">
                     </picture>
                 </div>
