--- a/pg_carne.html
+++ b/pg_carne.html
@@ -72,15 +72,15 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/arroz_panelaco_parbolizado_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/arroz_panelaco_parbolizado_233.jpg" alt="panelaço parbolizado 233px">
+                        <source srcset="img/costela_suina_temperada_seara_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/costela_suina_temperada_seara_1kg_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Arroz - Panelaço - Parbolizado - 1Kg</p>
+                    <p>Costela Suína - temperada - Seara - 1Kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 5,69</h3>
+                    <h3 class="preco">R$ 19,99</h3>
                 </div>
             </div>
 
@@ -167,18 +167,46 @@
             <div class="produto">
                 <div class="img-produto">
                     <picture>
-                        <source srcset="img/coca_cola_2L_191.25.jpg" media="(max-width: 426px)">
-                        <img src="img/coca_cola_2L_233.jpg" alt="">
+                        <source srcset="img/file_de_peito_seara_1kg_191.25.jpg" media="(max-width: 426px)">
+                        <img src="img/file_de_peito_seara_1kg_233.jpg" alt="">
                     </picture>
                 </div>
                 <div class="descricao-produto">
-                    <p>Coca Cola - Sabor original - 2L</p>
+                    <p>Filé de Peito de frango - Seara - 1Kg</p>
                 </div>
                 <div class="valor-produto">
-                    <h3 class="preco">R$ 9,95</h3>
+                    <h3 class="preco">R$ 18,79</h3>
+                </div>
+            </div>
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/empanado_pedigao_200g_233.jpg" media="(max-width: 426px)">
+                        <img src="img/empanado_pedigao_200g_233.jpg" alt="">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Empanado - Perdigão - 200g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 2,49</h3>
                 </div>
             </div>
 
+            <div class="produto">
+                <div class="img-produto">
+                    <picture>
+                        <source srcset="img/salsicha_tipo_viena_perdigão_500g_233.jpg" media="(max-width: 426px)">
+                        <img src="img/salsicha_tipo_viena_perdigão_500g_233.jpg" alt="">
+                    </picture>
+                </div>
+                <div class="descricao-produto">
+                    <p>Salsicha tipo Viena - Perdigão - 500g</p>
+                </div>
+                <div class="valor-produto">
+                    <h3 class="preco">R$ 12,99</h3>
+                </div>
+            </div>
             <div class="produto">
                 <div class="img-produto">
                     <picture>
